Added motivation text

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         <article class="motivation__text">
           <h1 class="motivation__text__header">Hello, good to see you here!</h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            
+            Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden. This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
+          </p>
+	   <p>
+	    On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers that together will try to build as many tools as possible that could be helpful for both the refugees and the volunteers. 
+          </p>
+	   <p>
+	    Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
           </p>
         </article>
       </section>
