Changed Inspirational Cases to simply Cases

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <section id="cases" class="cases">
         <header class="cases__text">
-          <h1 class="cases__text__header">Inspirational Cases</h1>
+          <h1 class="cases__text__header">Cases</h1>
         </header>
         <ul>
           <li>
