Added our email to the suggest a case text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </ul>
         <footer>
           <h1>More ideas?</h1>
-          <p>Do you have an idea for another case that we have missed? Please help us out!</p><span class="buttons"><a href="/suggest" target="_blank" class="btn btn--outlined">Suggest a case</a></span>
+          <p>Do you have an idea for another case that we have missed? Please help us out by suggesting a case or sending an email to <a href="mailto:hello@hackforrefugees.com">hello@hackforrefugees.com</a>!</p><span class="buttons"><a href="/suggest" target="_blank" class="btn btn--outlined">Suggest a case</a></span>
         </footer>
       </section>
       <section id="hack" class="hack">
