Added unformatted Q&A. It's commented out though

--- a/index.html
+++ b/index.html
@@ -71,7 +71,21 @@
       <section id="hack" class="hack">
         <article class="hack__text">
           <h1 class="hack__text__header">The hack</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <!--p>
+	  Q: When can we start hacking?
+	  A: Whenever you want! If you want to get going right away, just send us a message and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 19:00 on Sunday the 6th, when you'll get to show off what you've done!
+	  Q: Will there be food?
+	  A: Hell's yeah. Breakfast, lunch and dinner both days!
+	  Q: I don't know what to hack on!
+	  A: Don't worry! Just bring a towel and have a look at the cases section.
+	  Q: We want to hack as a team, is that possible?
+	  A: It is! Either have the teammates enter the same team name when registering, or just show up and sit next to each other on hack day :)
+	  Q:  What will happen to the code after the hack?
+	  A: All code will be open sourced.
+	  Q: Will there be prizes?
+	  A: Karma. Loads. And possible something more tangible as well.
+
+	  </p-->
           <p>
             <h2 class="hack__text__header">Location</h2><span><a href="https://goo.gl/maps/JLHmvfAhHDE2" target="_blank">Burt - Vallgatan 27, Gothenburg</a></span>
           </p><span class="buttons"><a href="/register" target="_blank" class="btn btn--outlined">RSVP for the hack!</a></span>
